update artist response and other things